--- a/src/index.css
+++ b/src/index.css
@@ -62,12 +62,20 @@
 /* chart */
 .container .chart {
   width: 75%;
-  margin: 2rem 2rem 0 0;
+  height: 100vh;
+  margin: 2rem 2rem auto 0;
   position: absolute;
   left: 20rem;
 }
 
 .container .chart .chart-wrap {
-  width: 100%;
-  display: flex;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  column-gap: 50px;
+}
+
+.container .chart .chart-wrap #gauge {
+  margin: 0 auto;
+  padding-top: 4rem;
 }
