串接api將資料顯示於圖表內

--- a/src/index.css
+++ b/src/index.css
@@ -79,3 +79,10 @@
   margin: 0 auto;
   padding-top: 4rem;
 }
+
+.container .chart .chart-wrap .wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
