--- a/src/App.css
+++ b/src/App.css
@@ -141,10 +141,10 @@ html, body {
   position: absolute;
   top: 0;
   left: 22rem;
-  /* display: grid;
-  grid-template-columns: 100%;
+  display: grid;
+  grid-template-columns: 50% 50%;
   grid-template-rows: 200px auto;
-  column-gap: 50px; */
+  column-gap: 50px;
 }
 
 .App .container .read_csv .input-wrap .button-wrap {
@@ -175,7 +175,7 @@ html, body {
 }
 
 .App .container .read_csv .chart-wrap {
-  width: 50%;
+  width: 100%;
   margin: 2rem 0 0;
 }
 
