--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   padding: 0;
   margin: 0;
   list-style: none;
+  box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -91,15 +92,12 @@ html, body {
 .App .container .nav-wrap .logo img {
   width: 15rem;
   cursor: pointer;
+  transition: .3s;
 }
 
 .App .container .nav-wrap .nav {
   width: 100%;
-  margin: 2rem 0 0;
-}
-
-.App .container .nav-wrap .nav ul {
-  padding-bottom: 1.5rem;
+  margin: 2rem 0;
 }
 
 .App .container .nav-wrap .nav ul li button {
@@ -156,8 +154,8 @@ html, body {
 }
 
 .App .container .read_csv .input-wrap .button-wrap input {
-  width: 180px;
-  height: 25px;
+  width: 200px;
+  height: 100%;
   padding: 10px;
 }
 
@@ -179,3 +177,113 @@ html, body {
   margin: 2rem 0 0;
 }
 
+/* 筆電 */
+@media screen and (max-width: 1199px) {
+  .App .container label {
+    left: 14.5rem;
+  }
+
+  .App .container .nav-wrap .logo img {
+    width: 12rem;
+  }
+}
+
+/* 平板 */
+@media screen and (max-width: 991px) {
+  .App .container {
+    width: 100%;
+  }
+
+  .App .container #collapse-control:checked ~ .nav-wrap {
+    left: 0;
+  }
+  .App .container #collapse-control:checked ~ .nav-wrap .nav {
+    height: 0;
+    margin: 0;
+    visibility: hidden;
+  }
+  .App .container #collapse-control:checked ~ label {
+    top: 25px;
+    left: 25px;
+  }
+
+  .App .container .nav-wrap {
+    width: 100%;
+    height: auto;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
+  }
+
+  .App .container .nav-wrap .logo {
+    height: 4rem;
+  }
+
+  .App .container .nav-wrap .logo img {
+    width: 12rem;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+  }
+
+  .App .container .nav-wrap .nav {
+    width: 100%;
+    margin: 1rem auto;
+  }
+
+  .App .container label {
+    width: 45px;
+    height: 40px;
+    padding: 5px;
+    box-shadow: none;
+    border: 2px solid #aaa;
+    position: absolute;
+    left: 25px;
+    top: 25px;
+  }
+
+  .App .container label .fa-arrow-left,
+  .App .container label .fa-arrow-right {
+    display: none;
+  }
+
+  .App .container label .menu-line {
+    display: block;
+    height: 4px;
+    width: 100%;
+    border-radius: 10px;
+    background: rgb(125, 118, 233);
+  }
+  .App .container label .menu-line::before {
+    content: '';
+    position: absolute;
+    top: 8px;
+    height: 4px;
+    width: 75%;
+    border-radius: 10px;
+    background: rgb(125, 118, 233);
+  }
+  .App .container label .menu-line::after {
+    content: '';
+    position: absolute;
+    bottom: 8px;
+    height: 4px;
+    width: 75%;
+    border-radius: 10px;
+    background: rgb(125, 118, 233);
+  }
+  .App .container label .menu-line1 {
+    transform-origin: 0% 0%;
+    transition: transform 0.4s ease-in-out;
+  }
+  .App .container label .menu-line2 {
+    transition: transform 0.2s ease-in-out;
+  }
+  .App .container label .menu-line3 {
+    transform-origin: 0% 100%;
+    transition: transform 0.4s ease-in-out;
+  }
+}
+
+/* 手機 */
+@media screen and (max-width: 767px) {
+  
+}
